compiler/testData/readJavaBinaryClass/kotlinSignature/error/NotVarargReplacedWithVararg.kt
package test

import java.util.*

public open class NotVarargReplacedWithVararg : Object() {
    public open fun foo(p0 : String?) {
        throw UnsupportedOperationException()
    }
}
